# aoc25

./: .gitignore  CHANGELOG.md  LICENSE  aoc25.cabal
app/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Main.hs
src/: Combinators.hs  Utils.hs
