cabal-version:      3.0
name:               aoc25
version:            0.1.0.0
author:             xemotrix
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Combinators
        ,Utils
    build-depends:    
        base
    hs-source-dirs:   src
    default-language: GHC2021

executable aoc25
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Day1,Day2
    build-depends:
        base
        ,aoc25
        ,containers ^>= 0.7
    build-depends:    base
    hs-source-dirs:   app
    default-language: GHC2021
